--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,117 +4,7 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <title>Privacy Policy - Poka Yoke</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
-      line-height: 1.6;
-      color: #333;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      padding: 20px;
-      min-height: 100vh;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      background: white;
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-    }
-
-    h1 {
-      color: #667eea;
-      font-size: 2.5em;
-      margin-bottom: 10px;
-      text-align: center;
-      border-bottom: 3px solid #667eea;
-      padding-bottom: 15px;
-    }
-
-    .last-updated {
-      text-align: center;
-      color: #666;
-      font-size: 0.9em;
-      margin-bottom: 30px;
-      font-style: italic;
-    }
-
-    h2 {
-      color: #764ba2;
-      font-size: 1.5em;
-      margin-top: 30px;
-      margin-bottom: 15px;
-      padding-left: 10px;
-      border-left: 4px solid #667eea;
-    }
-
-    p {
-      margin-bottom: 15px;
-      text-align: justify;
-    }
-
-    ul {
-      margin: 15px 0;
-      padding-left: 40px;
-    }
-
-    li {
-      margin-bottom: 10px;
-    }
-
-    a {
-      color: #667eea;
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-
-    a:hover {
-      color: #764ba2;
-      text-decoration: underline;
-    }
-
-    .contact-section {
-      background: #f8f9fa;
-      padding: 20px;
-      border-radius: 8px;
-      margin-top: 30px;
-      border-left: 4px solid #667eea;
-    }
-
-    .footer {
-      text-align: center;
-      margin-top: 40px;
-      padding-top: 20px;
-      border-top: 2px solid #e0e0e0;
-      color: #666;
-      font-size: 0.9em;
-    }
-
-    @media (max-width: 768px) {
-      .container {
-        padding: 20px;
-      }
-
-      h1 {
-        font-size: 2em;
-      }
-
-      h2 {
-        font-size: 1.3em;
-      }
-
-      body {
-        padding: 10px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
