--- a/index.html
+++ b/index.html
@@ -8,35 +8,47 @@
 </head>
 <body>
   <div class="container">
-    <h1>Privacy Policy</h1>
-    <p class="last-updated">Effective as of November 22, 2025</p>
+    <h1>Gizlilik Politikası / Privacy Policy</h1>
+    <p class="last-updated">Geçerlilik Tarihi / Effective Date: 22 Kasım 2025 / November 22, 2025</p>
+    
+    <p>Bu gizlilik politikası, devclair (bundan böyle "Hizmet Sağlayıcı" olarak anılacaktır) tarafından Ücretsiz bir hizmet olarak oluşturulan mobil cihazlar için Poka Yoke uygulaması (bundan böyle "Uygulama" olarak anılacaktır) için geçerlidir. Bu hizmet "OLDUĞU GİBİ" kullanım için tasarlanmıştır.</p>
     
     <p>This privacy policy applies to the Poka Yoke app (hereby referred to as "Application") for mobile devices that was created by devclair (hereby referred to as "Service Provider") as a Free service. This service is intended for use "AS IS".</p>
 
-    <h2>What information does the Application obtain and how is it used?</h2>
+    <h2>Uygulama hangi bilgileri alır ve nasıl kullanılır? / What information does the Application obtain and how is it used?</h2>
+    <p>Uygulama, siz indirip kullandığınızda herhangi bir bilgi almaz. Uygulamayı kullanmak için kayıt gerekmez.</p>
     <p>The Application does not obtain any information when you download and use it. Registration is not required to use the Application.</p>
 
-    <h2>Does the Application collect precise real time location information of the device?</h2>
+    <h2>Uygulama cihazın gerçek zamanlı konum bilgisini topluyor mu? / Does the Application collect precise real time location information of the device?</h2>
+    <p>Bu Uygulama, mobil cihazınızın konumu hakkında kesin bilgi toplamaz.</p>
     <p>This Application does not collect precise information about the location of your mobile device.</p>
 
-    <h2>Do third parties see and/or have access to information obtained by the Application?</h2>
+    <h2>Üçüncü taraflar Uygulama tarafından elde edilen bilgileri görüyor mu ve/veya erişiyor mu? / Do third parties see and/or have access to information obtained by the Application?</h2>
+    <p>Uygulama herhangi bir bilgi toplamadığından, üçüncü taraflarla hiçbir veri paylaşılmaz.</p>
     <p>Since the Application does not collect any information, no data is shared with third parties.</p>
 
-    <h2>What are my opt-out rights?</h2>
+    <h2>Vazgeçme haklarım nelerdir? / What are my opt-out rights?</h2>
+    <p>Uygulamayı kaldırarak tüm bilgi toplamasını kolayca durdurabilirsiniz. Mobil cihazınızın bir parçası olarak veya mobil uygulama pazarı veya ağı aracılığıyla mevcut olan standart kaldırma işlemlerini kullanabilirsiniz.</p>
     <p>You can stop all collection of information by the Application easily by uninstalling it. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network.</p>
 
-    <h2>Children</h2>
+    <h2>Çocuklar / Children</h2>
+    <p>Uygulama, 13 yaşın altındaki çocuklardan bilerek veri toplamak veya onlara pazarlama yapmak için kullanılmaz.</p>
     <p>The Application is not used to knowingly solicit data from or market to children under the age of 13.</p>
+
+    <p>Hizmet Sağlayıcı, çocuklardan bilerek kişisel olarak tanımlanabilir bilgiler toplamaz. Hizmet Sağlayıcı, tüm çocukları Uygulama ve/veya Hizmetler aracılığıyla asla kişisel olarak tanımlanabilir bilgiler göndermemeye teşvik eder. Hizmet Sağlayıcı, ebeveynleri ve yasal vasileri, çocuklarının İnternet kullanımını izlemeye ve çocuklarına Uygulama ve/veya Hizmetler aracılığıyla izinleri olmadan asla kişisel olarak tanımlanabilir bilgiler sağlamamaları talimatını vererek bu Politikayı uygulamaya yardımcı olmaya teşvik eder. Bir çocuğun Uygulama ve/veya Hizmetler aracılığıyla Hizmet Sağlayıcıya kişisel olarak tanımlanabilir bilgiler sağladığına inanmak için nedeniniz varsa, lütfen Hizmet Sağlayıcı ile iletişime geçin (<a href="mailto:canemrullahwork@gmail.com">canemrullahwork@gmail.com</a>), böylece gerekli işlemleri yapabilirler. Ayrıca, ülkenizde kişisel olarak tanımlanabilir bilgilerinizin işlenmesine onay vermek için en az 16 yaşında olmanız gerekir (bazı ülkelerde ebeveynlerinizin veya vasinizin sizin adınıza bunu yapmasına izin verebiliriz).</p>
 
     <p>The Service Provider does not knowingly collect personally identifiable information from children. The Service Provider encourages all children to never submit any personally identifiable information through the Application and/or Services. The Service Provider encourage parents and legal guardians to monitor their children's Internet usage and to help enforce this Policy by instructing their children never to provide personally identifiable information through the Application and/or Services without their permission. If you have reason to believe that a child has provided personally identifiable information to the Service Provider through the Application and/or Services, please contact the Service Provider (<a href="mailto:canemrullahwork@gmail.com">canemrullahwork@gmail.com</a>) so that they will be able to take the necessary actions. You must also be at least 16 years of age to consent to the processing of your personally identifiable information in your country (in some countries we may allow your parent or guardian to do so on your behalf).</p>
 
-    <h2>Security</h2>
+    <h2>Güvenlik / Security</h2>
+    <p>Hizmet Sağlayıcı, bilgilerinizin gizliliğini korumakla ilgilenmektedir. Ancak, Uygulama herhangi bir bilgi toplamadığından, verilerinizin yetkisiz kişiler tarafından erişilme riski yoktur.</p>
     <p>The Service Provider is concerned about safeguarding the confidentiality of your information. However, since the Application does not collect any information, there is no risk of your data being accessed by unauthorized individuals.</p>
 
-    <h2>Changes</h2>
+    <h2>Değişiklikler / Changes</h2>
+    <p>Bu Gizlilik Politikası herhangi bir nedenle zaman zaman güncellenebilir. Hizmet Sağlayıcı, bu sayfayı yeni Gizlilik Politikası ile güncelleyerek Gizlilik Politikasındaki herhangi bir değişikliği size bildirecektir. Devam eden kullanım, tüm değişikliklerin onaylandığı anlamına geldiğinden, bu Gizlilik Politikasını düzenli olarak gözden geçirmeniz önerilir.</p>
     <p>This Privacy Policy may be updated from time to time for any reason. The Service Provider will notify you of any changes to their Privacy Policy by updating this page with the new Privacy Policy. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes.</p>
 
-    <h2>Your Consent</h2>
+    <h2>Onayınız / Your Consent</h2>
+    <p>Uygulamayı kullanarak, bilgilerinizin bu Gizlilik Politikasında belirtildiği şekilde ve Hizmet Sağlayıcı tarafından değiştirildiği şekilde işlenmesine onay vermiş olursunuz.</p>
     <p>By using the Application, you are consenting to the processing of your information as set forth in this Privacy Policy now and as amended by the Service Provider.</p>
 
     <div class="contact-section">
